<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order Summary</string>
    <string name="quantity_count">2</string>
    <string name="new_quantity">%1$.0f</string>
    <string name="price">Order Summary</string>
    <string name="total_dollars">%s</string>
    <string name="minus_sign">-</string>
    <string name="addition_sign">+</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="customer_name">Name</string>
    <string name="send_email">Send Email</string>
    <string name="coffee_small">Small</string>
    <string name="coffee_large">Large</string>
    <string name="price_per_cup">Price Per Cup</string>
    <string name="coffee_size">Size</string>
    <string name="small_coffee_price">$2.00</string>
    <string name="large_coffee_price">$4.00</string>
</resources>
