<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ajspeller.justjava.JustJava">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:inputType="textCapWords"/>

        <TextView
            android:id="@+id/coffeeSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/coffee_size"
            android:textAllCaps="true"/>

        <RadioGroup
            android:id="@+id/coffeeSizeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/coffeeSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onSizeGroupClicked"
                android:text="@string/coffee_small"
                android:textAllCaps="true"/>

            <RadioButton
                android:id="@+id/coffeeLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSizeGroupClicked"
                android:text="@string/coffee_large"
                android:textAllCaps="true"/>

        </RadioGroup>

        <TextView
            android:id="@+id/pricePerCupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/price_per_cup"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/pricePerCupDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/toppings"
            android:textAllCaps="true"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/decrease"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus_sign"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/quantity_count"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/increase"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/addition_sign"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/price"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/total_dollars"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:padding="8dp"
                android:text="@string/order"
                android:textAllCaps="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="generateEmail"
                android:padding="8dp"
                android:text="@string/send_email"
                android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
