<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.ajspeller.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/quantity"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/decrease"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/minus_sign"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quantity_count"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/increase"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/addition_sign"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/price"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/total_dollars"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:padding="8dp"
        android:text="@string/order"
        android:textAllCaps="true"/>

</LinearLayout>
